resolved issue of redirection harcoded in fortify middleware

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "patch-package": "^6.5.1",
         "process": "^0.11.10",
         "vue-loader": "^17.0.1",
-        "vue-router": "^4.1.6"
+        "vue-router": "^4.1.6",
+        "vuex": "^4.1.0"
     }
 }
