--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^4.1.0",
+        "laravel-echo": "^1.15.0",
         "patch-package": "^6.5.1",
         "process": "^0.11.10",
+        "pusher-js": "^8.0.2",
         "vue-loader": "^17.0.1",
         "vue-router": "^4.1.6",
         "vuex": "^4.1.0"
